--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohappyeyeballs==2.4.3
 aiohttp==3.10.9
 aioitertools==0.12.0
 aiosignal==1.3.1
+annotated-types==0.7.0
 anyio==4.6.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -18,6 +19,7 @@ bleach==6.1.0
 boto3==1.35.34
 botocore==1.35.34
 bounded-pool-executor==0.0.3
+branca==0.8.0
 Cartopy==0.23.0
 certifi==2024.8.30
 cffi==1.17.1
@@ -34,12 +36,14 @@ dask==2023.7.0
 debugpy==1.8.6
 decorator==5.1.1
 defusedxml==0.7.1
+distro==1.9.0
 docopt==0.6.2
 earthaccess==0.5.2
 earthpy==0.9.4
 exceptiongroup==1.2.2
 executing==2.1.0
 fastjsonschema==2.20.0
+folium==0.17.0
 fonttools==4.54.1
 fqdn==1.5.1
 frozenlist==1.4.1
@@ -59,6 +63,7 @@ ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
+jiter==0.5.0
 jmespath==1.0.1
 json5==0.9.25
 jsonpointer==3.0.0
@@ -94,6 +99,8 @@ networkx==3.3
 notebook==7.2.2
 notebook_shim==0.2.4
 numpy==1.23.5
+openai==0.2.0
+opencv-python==4.10.0.84
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.3
@@ -110,6 +117,8 @@ psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
 pydap==3.4.0
 Pygments==2.18.0
 pyhdf==0.11.4
@@ -119,6 +128,7 @@ pyproj==3.7.0
 pyshp==2.3.1
 python-cmr==0.13.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.2
 PyYAML==6.0.2
@@ -162,5 +172,6 @@ websocket-client==1.8.0
 widgetsnbextension==4.0.13
 wrapt==1.16.0
 xarray==2023.7.0
+xyzservices==2024.9.0
 yarl==1.13.1
 zipp==3.20.2
